# smart-doser-idf

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
cert/: ca_cert.pem
components/bt_module/: CMakeLists.txt  bt_module.c
components/bt_module/include/: bt_module.h
components/doser/: CMakeLists.txt  doser.c
components/doser/include/: doser.h
components/io_module/: CMakeLists.txt  io_module.c
components/io_module/include/: io_module.h
components/lcd1604/: CMakeLists.txt  lcd1604.c
components/lcd1604/include/: lcd1604.h
components/stepper/: CMakeLists.txt  stepper.c
components/stepper/include/: stepper.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/time_manager/: CMakeLists.txt  time_manager.c
components/time_manager/include/: time_manager.h
components/wifi_module/: CMakeLists.txt  wifi_module.c
components/wifi_module/include/: wifi_module.h
main/: CMakeLists.txt  main.c
main/include/: main.h
